force-app/main/default/objects/Insurance_Plan__c/fields/Injection_Authorization_Process__c.field-meta.xml
<CustomField>
    <fullName>Injection_Authorization_Process__c</fullName>
    <label>Injection Authorization Process</label>
    <type>TextArea</type>
</CustomField>