force-app/main/default/objects/Insurance_Plan__c/fields/Insurance_Carrier__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Carrier__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Insurance Carrier</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Insurance Carrier</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Insurance Plans</relationshipLabel>
    <relationshipName>Insurance_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>