force-app/main/default/objects/Insurance_Plan__c/fields/Insurance_Company_From_VOB_Case__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Company_From_VOB_Case__c</fullName>
    <formula>TEXT( VOB_Case__r.Primary_Insurance__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Insurance Company From VOB Case</label>
    <type>Text</type>
</CustomField>