force-app/main/default/objects/Insurance_Plan__c/fields/Insurance_Company_Representative__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Company_Representative__c</fullName>
    <label>Insurance Company Representative</label>
    <length>75</length>
    <type>Text</type>
</CustomField>