force-app/main/default/objects/Insurance_Plan__c/fields/Insurance_ID_Number__c.field-meta.xml
<CustomField>
    <fullName>Insurance_ID_Number__c</fullName>
    <label>Insurance ID Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>