force-app/main/default/objects/Insurance_Plan__c/fields/Insurance_Phone__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Phone__c</fullName>
    <label>Insurance Phone</label>
    <type>Phone</type>
</CustomField>