force-app/main/default/objects/Insurance_Plan__c/fields/Insurance_Plan_Formula__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Plan_Formula__c</fullName>
    <formula>IF(
AND(
ispickval( Fee_Schedule__c , &quot;CMS&quot;),
    Allowance_Percentage_Number__c  &gt;=  150),
&quot;Upper CMS&quot;,
IF(
CONTAINS( text(Insurance_Company__c) , &quot;medicare&quot;),
&quot;MCR&quot;,
IF(
OR(
text(Fee_Schedule__c) = &quot;FH&quot;,
text(Fee_Schedule__c) = &quot;PIP&quot;,
text(Fee_Schedule__c) = &quot;W/Comp&quot;,
text(Fee_Schedule__c) = &quot;UCR&quot;,
text(Fee_Schedule__c) = &quot;R&amp;C&quot;,
text(Fee_Schedule__c) = &quot;70 MRC&quot;,
text(Fee_Schedule__c) = &quot;80 MRC&quot;,
text(Fee_Schedule__c) = &quot;90 MRC&quot;,
text(Fee_Schedule__c) = &quot;Fair Health Allowance Local&quot;,
text(Fee_Schedule__c) = &quot;Fair Health Charge Local&quot;,
text(Fee_Schedule__c) = &quot;Cigna MRC 1&quot;,
text(Fee_Schedule__c) = &quot;W/COMP&quot;,
text(Fee_Schedule__c) = &quot;Fair Health Charge National&quot;,
text(Fee_Schedule__c) = &quot;Fair Health Allowance National&quot;,
text(Fee_Schedule__c) = &quot;Fair Health&quot;,
text(Fee_Schedule__c) = &quot;W/C&quot;,
text(Fee_Schedule__c) = &quot;U&amp;C&quot;
),
&quot;PPO&quot;,

IF(
OR(
text(Fee_Schedule__c) = &quot;SELF PAY&quot;,
text(Fee_Schedule__c) = &quot;NO OON&quot;
),
&quot;Self Pay&quot;,
&quot;HMO&quot;
)
)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Insurance Plan Formula</label>
    <type>Text</type>
</CustomField>