force-app/main/default/objects/Insurance_Plan__c/fields/Is_There_a_Medicare_Replacement_Plan_NEW__c.field-meta.xml
<CustomField>
    <fullName>Is_There_a_Medicare_Replacement_Plan_NEW__c</fullName>
    <label>Is There a Medicare Replacement Plan</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No_N_A</valueSetName>
    </valueSet>
</CustomField>