force-app/main/default/objects/Insurance_Plan__c/fields/Is_this_plan_Embedded_or_Aggregate__c.field-meta.xml
<CustomField>
    <fullName>Is_this_plan_Embedded_or_Aggregate__c</fullName>
    <label>Is this plan Embedded or Aggregate?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Embedded</fullName>
            </value>
            <value>
                <fullName>Aggregate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>