force-app/main/default/objects/Insurance_Plan__c/fields/J7320__c.field-meta.xml
<CustomField>
    <fullName>J7320__c</fullName>
    <label>J7320</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>