force-app/main/default/objects/Insurance_Plan__c/fields/J7322_Diagnosis_Driven__c.field-meta.xml
<CustomField>
    <fullName>J7322_Diagnosis_Driven__c</fullName>
    <label>J7322 Diagnosis Driven</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>