force-app/main/default/objects/Insurance_Plan__c/fields/J7324__c.field-meta.xml
<CustomField>
    <fullName>J7324__c</fullName>
    <label>J7324</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>