force-app/main/default/objects/Insurance_Plan__c/fields/L0180__c.field-meta.xml
<CustomField>
    <fullName>L0180__c</fullName>
    <label>L0180</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>