force-app/main/default/objects/Insurance_Plan__c/fields/L0631__c.field-meta.xml
<CustomField>
    <fullName>L0631__c</fullName>
    <label>L0631</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>