force-app/main/default/objects/Insurance_Plan__c/fields/Medical_Necessity_Exemption_for_PT__c.field-meta.xml
<CustomField>
    <fullName>Medical_Necessity_Exemption_for_PT__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Medical Necessity Exemption for PT</label>
    <type>Checkbox</type>
</CustomField>