force-app/main/default/objects/Insurance_Plan__c/fields/Medicare_Annual_Deductible__c.field-meta.xml
<CustomField>
    <fullName>Medicare_Annual_Deductible__c</fullName>
    <label>Medicare Annual Deductible</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>