force-app/main/default/objects/Insurance_Plan__c/fields/Medicare_Deductible_Met__c.field-meta.xml
<CustomField>
    <fullName>Medicare_Deductible_Met__c</fullName>
    <label>Medicare Deductible Met</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>