force-app/main/default/objects/Insurance_Plan__c/fields/Medicare_Deductible_Unmet__c.field-meta.xml
<CustomField>
    <fullName>Medicare_Deductible_Unmet__c</fullName>
    <label>Medicare Deductible Unmet</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>