force-app/main/default/objects/Insurance_Plan__c/fields/Medicare_Member_Id__c.field-meta.xml
<CustomField>
    <fullName>Medicare_Member_Id__c</fullName>
    <label>Medicare Member Id</label>
    <length>15</length>
    <type>Text</type>
</CustomField>