force-app/main/default/objects/Insurance_Plan__c/fields/Medicare_Notes__c.field-meta.xml
<CustomField>
    <fullName>Medicare_Notes__c</fullName>
    <label>Medicare Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>