force-app/main/default/objects/Insurance_Plan__c/fields/Medicare_OT_Benefits_Used_To_Date__c.field-meta.xml
<CustomField>
    <fullName>Medicare_OT_Benefits_Used_To_Date__c</fullName>
    <label>Medicare OT Benefits Used To Date</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>