force-app/main/default/objects/Insurance_Plan__c/fields/Medicare_Replacement_Plan_Carrier__c.field-meta.xml
<CustomField>
    <fullName>Medicare_Replacement_Plan_Carrier__c</fullName>
    <label>Medicare Replacement Plan Carrier</label>
    <length>150</length>
    <type>Text</type>
</CustomField>