force-app/main/default/objects/Insurance_Plan__c/fields/Medicare_Replacement_Plan_Type__c.field-meta.xml
<CustomField>
    <fullName>Medicare_Replacement_Plan_Type__c</fullName>
    <label>Medicare Replacement Plan Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>HMO</fullName>
            </value>
            <value>
                <fullName>PPO</fullName>
            </value>
            <value>
                <fullName>PPP</fullName>
                <isActive>false</isActive>
                <label>PPP</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>