force-app/main/default/objects/Insurance_Plan__c/fields/Method_of_Payment__c.field-meta.xml
<CustomField>
    <fullName>Method_of_Payment__c</fullName>
    <label>Method of Payment</label>
    <length>100</length>
    <type>Text</type>
</CustomField>