force-app/main/default/objects/Insurance_Plan__c/fields/New_WC_Adjuster_old__c.field-meta.xml
<CustomField>
    <fullName>New_WC_Adjuster_old__c</fullName>
    <label>New WC Adjuster</label>
    <length>75</length>
    <type>Text</type>
</CustomField>