force-app/main/default/objects/Insurance_Plan__c/fields/NJ_Spine_Listed_as_In_Network_NEW__c.field-meta.xml
<CustomField>
    <fullName>NJ_Spine_Listed_as_In_Network_NEW__c</fullName>
    <label>NJ Spine Listed as In Network</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No_N_A</valueSetName>
    </valueSet>
</CustomField>