force-app/main/default/objects/Insurance_Plan__c/fields/NJSW_Net_New__c.field-meta.xml
<CustomField>
    <fullName>NJSW_Net_New__c</fullName>
    <label>NJSW Net New</label>
    <length>100</length>
    <type>Text</type>
</CustomField>