force-app/main/default/objects/Insurance_Plan__c/fields/Occupation_Therapy_Visits_Allowed__c.field-meta.xml
<CustomField>
    <fullName>Occupation_Therapy_Visits_Allowed__c</fullName>
    <label>Occupation Therapy Visits Allowed</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>