force-app/main/default/objects/Insurance_Plan__c/fields/OT_Hard_Max__c.field-meta.xml
<CustomField>
    <fullName>OT_Hard_Max__c</fullName>
    <defaultValue>false</defaultValue>
    <label>OT Hard Max?</label>
    <type>Checkbox</type>
</CustomField>