force-app/main/default/objects/Insurance_Plan__c/fields/OT_Paid_Under_Capitation__c.field-meta.xml
<CustomField>
    <fullName>OT_Paid_Under_Capitation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>OT Paid Under Capitation</label>
    <type>Checkbox</type>
</CustomField>