force-app/main/default/objects/Insurance_Plan__c/fields/Out_of_Network_Family_Deductible__c.field-meta.xml
<CustomField>
    <fullName>Out_of_Network_Family_Deductible__c</fullName>
    <label>Out of Network Family Deductible</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>