force-app/main/default/objects/Insurance_Plan__c/fields/Patient_Date_Of_Birth__c.field-meta.xml
<CustomField>
    <fullName>Patient_Date_Of_Birth__c</fullName>
    <label>Patient Date Of Birth</label>
    <type>Date</type>
</CustomField>