force-app/main/default/objects/Insurance_Plan__c/fields/Patient_Eligible_For_Orhtotics__c.field-meta.xml
<CustomField>
    <fullName>Patient_Eligible_For_Orhtotics__c</fullName>
    <label>Patient Eligible For Orhtotics</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No_N_A</valueSetName>
    </valueSet>
</CustomField>