force-app/main/default/objects/Insurance_Plan__c/fields/Patient_Eligible_For_TENS__c.field-meta.xml
<CustomField>
    <fullName>Patient_Eligible_For_TENS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Patient Eligible For TENS</label>
    <type>Checkbox</type>
</CustomField>