force-app/main/default/objects/Insurance_Plan__c/fields/Patient_Have_Out_of_Network_Benefits__c.field-meta.xml
<CustomField>
    <fullName>Patient_Have_Out_of_Network_Benefits__c</fullName>
    <label>Patient Have Out of Network Benefits</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No_N_A</valueSetName>
    </valueSet>
</CustomField>