force-app/main/default/objects/Insurance_Plan__c/fields/Person_Account_Id__c.field-meta.xml
<CustomField>
    <fullName>Person_Account_Id__c</fullName>
    <formula>VOB_Case__r.AccountId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Person Account Id</label>
    <type>Text</type>
</CustomField>