force-app/main/default/objects/Insurance_Plan__c/fields/Pharmacy_Benefits__c.field-meta.xml
<CustomField>
    <fullName>Pharmacy_Benefits__c</fullName>
    <label>Pharmacy Benefits</label>
    <length>150</length>
    <type>Text</type>
</CustomField>