force-app/main/default/objects/Insurance_Plan__c/fields/Pharmacy_Benefits_Phone__c.field-meta.xml
<CustomField>
    <fullName>Pharmacy_Benefits_Phone__c</fullName>
    <label>Pharmacy Benefits Phone</label>
    <type>Phone</type>
</CustomField>