force-app/main/default/objects/Insurance_Plan__c/fields/Physical_Therapy_Benefits_Cigna_ASHN__c.field-meta.xml
<CustomField>
    <fullName>Physical_Therapy_Benefits_Cigna_ASHN__c</fullName>
    <label>Physical Therapy Benefits Cigna ASHN</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No_N_A</valueSetName>
    </valueSet>
</CustomField>