force-app/main/default/objects/Insurance_Plan__c/fields/Physical_Therapy_Visits_Allowed__c.field-meta.xml
<CustomField>
    <fullName>Physical_Therapy_Visits_Allowed__c</fullName>
    <label>Physical Therapy Visits Allowed</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>