force-app/main/default/objects/Insurance_Plan__c/fields/Plan_Follows_Erisa_Guidelines_OLD__c.field-meta.xml
<CustomField>
    <fullName>Plan_Follows_Erisa_Guidelines_OLD__c</fullName>
    <label>Plan Follows Erisa Guidelines</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>