force-app/main/default/objects/Insurance_Plan__c/fields/Policy_Follow_a_Diabetic_Mandate__c.field-meta.xml
<CustomField>
    <fullName>Policy_Follow_a_Diabetic_Mandate__c</fullName>
    <label>Policy Follow a Diabetic Mandate</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CaseYes_No</valueSetName>
    </valueSet>
</CustomField>