force-app/main/default/objects/Insurance_Plan__c/fields/Policy_Follow_a_Diabetic_Mandate_OLD__c.field-meta.xml
<CustomField>
    <fullName>Policy_Follow_a_Diabetic_Mandate_OLD__c</fullName>
    <label>Policy Follow a Diabetic Mandate OLD</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No_N_A</valueSetName>
    </valueSet>
</CustomField>