force-app/main/default/objects/Insurance_Plan__c/fields/Policy_Follow_the_Orthotics_Mandate__c.field-meta.xml
<CustomField>
    <fullName>Policy_Follow_the_Orthotics_Mandate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Policy Follow the Orthotics Mandate</label>
    <type>Checkbox</type>
</CustomField>