force-app/main/default/objects/Insurance_Plan__c/fields/Previous_Injuries_On_File__c.field-meta.xml
<CustomField>
    <fullName>Previous_Injuries_On_File__c</fullName>
    <label>Previous Injuries On File</label>
    <type>TextArea</type>
</CustomField>