force-app/main/default/objects/Insurance_Plan__c/fields/Procedure_Benefits_Notes__c.field-meta.xml
<CustomField>
    <fullName>Procedure_Benefits_Notes__c</fullName>
    <label>Procedure Benefits Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>