force-app/main/default/objects/Insurance_Plan__c/fields/Procedure_Diagnosis_Codes__c.field-meta.xml
<CustomField>
    <fullName>Procedure_Diagnosis_Codes__c</fullName>
    <label>Procedure Diagnosis Codes</label>
    <type>TextArea</type>
</CustomField>