force-app/main/default/objects/Insurance_Plan__c/fields/Procedures_Diagnosis_Dependent__c.field-meta.xml
<CustomField>
    <fullName>Procedures_Diagnosis_Dependent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Procedures Diagnosis Dependent</label>
    <type>Checkbox</type>
</CustomField>