force-app/main/default/objects/Insurance_Plan__c/fields/PT_Hard_Max__c.field-meta.xml
<CustomField>
    <fullName>PT_Hard_Max__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PT Hard Max?</label>
    <type>Checkbox</type>
</CustomField>