force-app/main/default/objects/Insurance_Plan__c/fields/PT_OT_Combined_In_Same_Day__c.field-meta.xml
<CustomField>
    <fullName>PT_OT_Combined_In_Same_Day__c</fullName>
    <label>PT OT Combined In Same Day</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>