force-app/main/default/objects/Insurance_Plan__c/fields/PT_Paid_Under_Capitation__c.field-meta.xml
<CustomField>
    <fullName>PT_Paid_Under_Capitation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PT Paid Under Capitation</label>
    <type>Checkbox</type>
</CustomField>