force-app/main/default/objects/Insurance_Plan__c/fields/Reimbursement_Type__c.field-meta.xml
<CustomField>
    <fullName>Reimbursement_Type__c</fullName>
    <label>Reimbursement Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Reimbursement_Type</valueSetName>
    </valueSet>
</CustomField>