force-app/main/default/objects/Insurance_Plan__c/fields/Rental_Required_For_Purchase_E0730__c.field-meta.xml
<CustomField>
    <fullName>Rental_Required_For_Purchase_E0730__c</fullName>
    <label>Rental Required For Purchase E0730</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No_N_A</valueSetName>
    </valueSet>
</CustomField>