force-app/main/default/objects/Insurance_Plan__c/fields/Reverification_Notes__c.field-meta.xml
<CustomField>
    <fullName>Reverification_Notes__c</fullName>
    <label>Reverification Notes</label>
    <type>TextArea</type>
</CustomField>