force-app/main/default/objects/Insurance_Plan__c/fields/School_Insurance_Active_and_Open__c.field-meta.xml
<CustomField>
    <fullName>School_Insurance_Active_and_Open__c</fullName>
    <label>School Insurance Open and Active?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>