force-app/main/default/objects/Insurance_Plan__c/fields/School_Primary_Insurance__c.field-meta.xml
<CustomField>
    <fullName>School_Primary_Insurance__c</fullName>
    <label>Primary Insurance</label>
    <length>100</length>
    <type>Text</type>
</CustomField>