force-app/main/default/objects/Insurance_Plan__c/fields/School_Primary_Insurance_Company__c.field-meta.xml
<CustomField>
    <fullName>School_Primary_Insurance_Company__c</fullName>
    <label>Primary Insurance Company</label>
    <length>254</length>
    <type>Text</type>
</CustomField>