force-app/main/default/objects/Insurance_Plan__c/fields/Secondary_Plan_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Plan_Effective_Date__c</fullName>
    <label>Secondary Plan Effective Date</label>
    <type>Date</type>
</CustomField>