force-app/main/default/objects/Insurance_Plan__c/fields/SHBP__c.field-meta.xml
<CustomField>
    <fullName>SHBP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SHBP</label>
    <type>Checkbox</type>
</CustomField>