force-app/main/default/objects/Insurance_Plan__c/fields/Start_of_Plan_Year__c.field-meta.xml
<CustomField>
    <fullName>Start_of_Plan_Year__c</fullName>
    <label>Start of Plan Year</label>
    <type>Date</type>
</CustomField>