force-app/main/default/objects/Insurance_Plan__c/fields/Supplemental_Follows_Medicare_Guidelines__c.field-meta.xml
<CustomField>
    <fullName>Supplemental_Follows_Medicare_Guidelines__c</fullName>
    <label>Supplemental Follows Medicare Guidelines</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No_N_A</valueSetName>
    </valueSet>
</CustomField>