force-app/main/default/objects/Insurance_Plan__c/fields/Supplemental_Id__c.field-meta.xml
<CustomField>
    <fullName>Supplemental_Id__c</fullName>
    <label>Supplemental Id</label>
    <length>150</length>
    <type>Text</type>
</CustomField>