force-app/main/default/objects/Insurance_Plan__c/fields/Supplemental_Plan_Type__c.field-meta.xml
<CustomField>
    <fullName>Supplemental_Plan_Type__c</fullName>
    <label>Supplemental Plan Type</label>
    <length>150</length>
    <type>Text</type>
</CustomField>